--- a/www/main.html
+++ b/www/main.html
@@ -180,19 +180,16 @@
 <script type="text/javascript">
 
  
-/*if(window.localStorage.getItem("seller_details")){
+if(window.localStorage.getItem("seller_details")){
   
   setTimeout(function(){
     mainView.router.navigate("/dashboard/");  
   }, 1500);
   
 }
-*/
 
 
-setTimeout(function(){
-    mainView.router.navigate("/dashboard/");
-  }, 1000);
+
 
 
 
